--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Container Queries | Rajat Kapoor</title>
     <!-- our own styles -->
-    <link href="./styles.css" rel="stylesheet">
-    <!-- <link href="./styles-polyfilled.css" rel="stylesheet">
-    <script src="https://unpkg.com/cqfill"></script> -->
+    <!-- <link href="./styles.css" rel="stylesheet"> -->
+    <link href="./styles-polyfilled.css" rel="stylesheet"> 
+    <script src="https://unpkg.com/cqfill"></script> 
 
 </head>
 
